[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
lib-simulation = { path = "../simulation" }
serde = { version = "*", features = ["derive"] }